Fluid: Missing cache invalidation when properties on non-domain objects change. #84369

Closed
opened 2021-01-04 12:14:23 +01:00 by Jacques Lucke · 20 comments

We get many bug reports on this topic. Usually they just differ in what property is changed. This is mainly an issue when the cache mode is set to Replay.

The issue is probably related to the fact, that the new fluid system, does not use the point cache system for caching. The domain object has a POINT_CACHE_RESET() depsgraph node, but it does not actually reset anything.

Reproduce without file:

  1. Add Quick Smoke to default cube.
  2. Play the simulation.
  3. While the simulation runs, change the Flow Type of the cube to Fire.
  4. Note that there is now fire in the simulation, but the cache has not been invalidated.

Instead of changing the Flow Type, many other properties can be changed as well. That also includes the position of the source object. The cache is only invalidated when the domain object is changed.

Bug reports with the same underlying issue can be merged into this report.

We get many bug reports on this topic. Usually they just differ in what property is changed. This is mainly an issue when the cache mode is set to Replay. The issue is probably related to the fact, that the new fluid system, does not use the point cache system for caching. The domain object has a `POINT_CACHE_RESET()` depsgraph node, but it does not actually reset anything. Reproduce without file: 1. Add Quick Smoke to default cube. 2. Play the simulation. 3. While the simulation runs, change the Flow Type of the cube to Fire. 4. Note that there is now fire in the simulation, but the cache has not been invalidated. Instead of changing the Flow Type, many other properties can be changed as well. That also includes the position of the source object. The cache is only invalidated when the domain object is changed. Bug reports with the same underlying issue can be merged into this report.
Poster
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Poster
Collaborator

Added subscribers: @JacquesLucke, @sebbas

Added subscribers: @JacquesLucke, @sebbas

#89746 was marked as duplicate of this issue

#89746 was marked as duplicate of this issue

#84314 was marked as duplicate of this issue

#84314 was marked as duplicate of this issue

#78936 was marked as duplicate of this issue

#78936 was marked as duplicate of this issue

#76095 was marked as duplicate of this issue

#76095 was marked as duplicate of this issue
Poster
Collaborator
Added subscribers: @NicolaSap, @jenkm, @StephenSwaney, @girafic, @RedpaX, @iss, @MahyarArdakani, @Mach, @LiborBatek, @mano-wii, @Nikhil.Net, @blenderhighschool, @lichtwerk, @ankitm
Poster
Collaborator

Added subscriber: @BaldingWizard

Added subscriber: @BaldingWizard
Poster
Collaborator

Added subscribers: @eigenstryker, @rjg

Added subscribers: @eigenstryker, @rjg

Added subscriber: @kmai

Added subscriber: @kmai

Added subscriber: @RedMser

Added subscriber: @RedMser

Added subscriber: @gabe2252

Added subscriber: @gabe2252

Added subscriber: @Mathis-8

Added subscriber: @Mathis-8

Added subscriber: @TheShadowMuffin

Added subscriber: @TheShadowMuffin

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscriber: @lictex_1

Added subscriber: @lictex_1

Added subscriber: @vignette

Added subscriber: @vignette

This issue was referenced by 67e23b4b29

This issue was referenced by 67e23b4b29676e7cbc039eba96e3edd78a632997

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-06-27 21:55:02 +02:00

Added subscriber: @AdamJanz

Added subscriber: @AdamJanz
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
12 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84369
There is no content yet.